<resources>
    <string name="app_name">Vascomm</string>
    <string name="hai_selamat">Hai, <b>Selamat Datang</b></string>
    <string name="hai_selamat_description">Silahkan Login Untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda">Masukkan email anda</string>
    <string name="password">Paswword</string>
    <string name="masukkan_password_anda">Masukkan password anda</string>
    <string name="konfirmasi_password">Konfirmasi Paswword</string>
    <string name="konfirmasi_password_anda">Konfirmasi Password Anda</string>
    <string name="lupa_password">Lupa Password Anda ?</string>
    <string name="belum_punya_akun">Belum punya akun ? <b>Daftar sekarang</b></string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_Belakang">Nama Belakang</string>
    <string name="no_ktp">No KTP</string>
    <string name="masukkan_no_ktp_anda">Masukkan No.KTP anda</string>
    <string name="no_telpon">No Telpon</string>
    <string name="masukkan_no_telepon">Masukkan No.Telepon anda</string>
    <string name="sudah_punya_akun">Sudah punya akun ? <b>Login sekarang</b></string>
    <string name="login_sekarang">Login sekarang</string>
    <string name="solusi_kesehatan_anda">Solusi, <b>Kesehatan Anda</b></string>
    <string name="uodate_informasi_kesehatan">Update informasi seputar kesehatan semua bisa disini!</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="layanan_khusus">Layanan Khusus</string>
    <string name="test_covid_19">Tes Covid 19, Cegah Corona Sedini mungkin</string>
    <string name="daftar_test">Daftar Tes</string>
    <string name="track_pemeriksaan">Track Pemeriksaan</string>
    <string name="kamu_dapat_mengecek">Kamu dapat mengecek progress pemeriksaanmu disini</string>
    <string name="track">Track</string>
    <string name="search">Search</string>
    <string name="all_product">All Product</string>
    <string name="layanan_kesehatan">Layanan Kesehatan</string>
    <string name="alat_kesehatan">Alat Kesehatan</string>
    <string name="suntik_steril">Suntik Steril</string>
    <string name="ready_stock">Ready Stock</string>
    <string name="harga">Rp. 10.000</string>
    <string name="title_star">5</string>
    <string name="swab_test">PCR Swab Test (Drive Thru) Hasil 1 Hari Kerja</string>
    <string name="harga_pcr">Rp. 1.400.000</string>
    <string name="hospital">Lenmarc Surabaya</string>
    <string name="alamat_hospital">Dukuh Pakis, Surabaya</string>
    <string name="tipe_layanan_kesehatan">Pilih Tipe Layanan Kesehatan Anda</string>
    <string name="satuan">Satuan</string>
    <string name="paket_pemeriksaan">Paket Pemeriksaan</string>
    <string name="tampilkan_lebih_banyak">Tampilkan Lebih Banyak</string>
    <string name="profile_saya">Profile Saya</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="name_profile"><b>Angga</b> Praja</string>
    <string name="jabatan">Membership BBLK</string>
    <string name="profile_desc">Lengkapi profile anda untuk memaksimalkan penggunaan aplikasi</string>
    <string name="pilih_data_ditampilkan">Pilih data yang ingin ditampilkan</string>
    <string name="data_diri">Data Diri</string>
    <string name="data_diri_desc">Data diri anda sesuai KTP</string>
    <string name="masukkan_nama_depan">Nama Depan</string>
    <string name="masukkan_nama_Belakang">Nama Belakang</string>
    <string name="syarat_profile">Pastikan profile anda terisi dengan benar, data pribadi anda terjamin keamanannya</string>
    <string name="simpan_profile">Simpan Profile</string>
    <string name="update_aplikasi">Ingin mendapat update dari kami ?</string>
    <string name="dapatkan_notifikasi">Dapatkan notifikasi</string>
    <string name="ikuti_kami">Ikuti kami di</string>
    <string name="Logout">Logout</string>
    <string name="faq">FAQ</string>
    <string name="term_and_Conditions">Term and Conditions</string>
    <string name="reserved">SILK. all right reserved.</string>


</resources>